# serde_dhall_typegen

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
serde_dhall_typegen/: Cargo.toml
serde_dhall_typegen/src/: lib.rs
serde_dhall_typegen/tests/: trybuild.rs
serde_dhall_typegen/tests/dhall/schema/: pair.dhall  pair2.dhall  quantity.dhall  thing2.dhall
serde_dhall_typegen/tests/rust/: metadata_lets.rs  name_prefix.rs  no_impl.rs  struct_impl.rs  type_impls.rs
serde_dhall_typegen_macros/: Cargo.toml
serde_dhall_typegen_macros/src/: lib.rs  named_type.rs  type_collection.rs  type_gen.rs
serde_dhall_typegen_macros/src/appendlist/: README.md  mod.rs
serde_dhall_typegen_macros/src/util/: push_cd.rs
src/: aggregate_type.rs  lib.rs  options.rs  schema.rs  type_collection.rs  type_gen.rs
src/appendlist/: appendlist.rs  mod.rs
src/util/: mod.rs  single.rs
tests/dhall/: persons.dhall  shopping_list.dhall
tests/dhall/schema/: no_derive.dhall  pairs.dhall  person.dhall  shopping_list.dhall  thing1.dhall  time.dhall  widget.dhall
tests/rust/: anonymous_types.rs  name_postfix.rs  name_prefix.rs  named_generics.rs  no_impl.stderr  type_parameters.rs
