[package]
name = "serde_dhall_typegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.10.0"
serde_dhall_typegen_macros = { version = "0.1.0", path = "../serde_dhall_typegen_macros" }
serde = "1.0.136"
serde_dhall = "0.11.0"


[dev-dependencies]
trybuild = "1.0.56"
